--- a/build.xml
+++ b/build.xml
@@ -30,10 +30,14 @@
 	</path>
 
 	<!-- Definitions of runnable ant targets.
-         Run them from the command line by executing "ant [targetname]"  -->
+         Run them from the command line by executing "ant [targetname]" 
+         debuggimine töötab kui classides on breakpointid lisatud -->
 
 	<target name="run" depends="build" description="Run the template application">
-		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes" />
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="run.classpath" fork="yes">
+			<jvmarg value="-Xdebug" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
+		</java>
 	</target>
 
 	<target name="build" description="Build the system">
@@ -90,5 +94,27 @@
 		<java jar="${build.dir}/jar/tesseract.jar" fork="yes" />
 
 	</target>
+
+	<!--git kaustas config failis:
+	
+	remote origin: url= https://kasutaja:parool@github.com
+	
+	exec käsuga saab käsurea asju teha, args argumendid -->
+	<target name="git_commit" description="add, commit, push">
+		<input message="Tag message: " addproperty="git.tag.message" />
+		<exec executable="git">
+			<arg value="add" />
+			<arg value="-A" />
+		</exec>
+		<exec executable="git">
+			<arg value="commit" />
+			<arg value="-m" />
+			<arg value="${git.tag.message}" />
+		</exec>
+		<exec executable="git">
+			<arg value="push" />
+		</exec>
+	</target>
+
 
 </project>
