--- a/build.xml
+++ b/build.xml
@@ -34,14 +34,14 @@
          debuggimine töötab kui classides on breakpointid lisatud -->
 
 	<target name="run" depends="build" description="Run the template application">
-		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="run.classpath" fork="yes">
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
 			<jvmarg value="-Xdebug" />
 			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
 		</java>
 	</target>
 	
 	<target name="runc" depends="build" description="Run the application (console)">
-		<java classname="ee.ut.math.tvt.[team].Intro" classpathref="test.classpath" fork="yes">
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
 			<arg value="console" />
 		</java>
 	</target>
