--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." name="templateApp" default="build">
+<project basedir="." name="POS-tesseract" default="build">
 
 	<!-- Definitions of variables used during the rest of this script -->
 
