--- a/build.xml
+++ b/build.xml
@@ -39,10 +39,7 @@
 		<fileset dir="${lib.dir}">
 			<include name="*.jar" />
 		</fileset>
-	</path>
-
-	<path id="compile.classpath">
-		<fileset dir="lib">
+		<fileset dir="${lib.hibernate.dir}">
 			<include name="*.jar" />
 		</fileset>
 	</path>
@@ -61,17 +58,14 @@
 		lisatud -->
 
 	<target name="run" depends="build" description="Run the template application">
-		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath"
-			fork="yes">
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
 			<jvmarg value="-Xdebug" />
-			<jvmarg
-				value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
 		</java>
 	</target>
 
 	<target name="runc" depends="build" description="Run the application (console)">
-		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath"
-			fork="yes">
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
 			<arg value="console" />
 		</java>
 	</target>
@@ -79,9 +73,7 @@
 	<target name="build" description="Build the system">
 		<mkdir dir="${build.dir}" />
 		<mkdir dir="${build.classes.dir}" />
-		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true"
-			debuglevel="lines,vars,source" encoding="utf-8" compiler="modern"
-			target="1.7" source="1.7" includeantruntime="false">
+		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true" debuglevel="lines,vars,source" encoding="utf-8" compiler="modern" target="1.7" source="1.7" includeantruntime="false">
 			<classpath refid="compile.classpath" />
 		</javac>
 
@@ -122,8 +114,7 @@
 		</copy>
 
 		<propertyfile file="etc/version.properties">
-			<entry key="build.revision.number" type="int" operation="+"
-				value="1" />
+			<entry key="build.revision.number" type="int" operation="+" value="1" />
 		</propertyfile>
 
 	</target>
@@ -175,15 +166,13 @@
 	</target>
 
 	<target name="dbmanager" description="Start the HSQLDB manager">
-		<java classname="org.hsqldb.util.DatabaseManagerSwing"
-			classpathref="run.classpath" fork="yes">
+		<java classname="org.hsqldb.util.DatabaseManagerSwing" classpathref="run.classpath" fork="yes">
 			<arg line="--user sa --url ${db.url}" />
 		</java>
 	</target>
 
 	<target name="startdb" description="Start the HSQLDB with the default params">
-		<java classname="org.hsqldb.Server" classpathref="run.classpath"
-			fork="yes">
+		<java classname="org.hsqldb.Server" classpathref="run.classpath" fork="yes">
 			<arg line="-database.0 '${db.file}' -dbname.0 '${db.alias}'" />
 		</java>
 	</target>
