--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 	<property name="build.classes.dir" value="${build.dir}/classes" />
 	<property name="src.dir" value="${basedir}/src" />
 	<property name="dist.dir" value="${basedir}/dist" />
-	<property name="conf.dir" value="${basedir}/etc" />
+	<property name="conf.dir" value="${basedir}/conf" />
 	<property name="doc.dir" value="${build.dir}/doc" />
 	<property name="test.reports.dir" value="${build.dir}/reports/" />
 	<property name="lib.dir" value="${basedir}/lib" />
@@ -51,6 +51,9 @@
 		<fileset dir="lib">
 			<include name="*.jar" />
 		</fileset>
+		<fileset dir="${lib.hibernate.dir}">
+			<include name="*.jar" />
+		</fileset>
 	</path>
 
 	<!-- Definitions of runnable ant targets. Run them from the command line 
@@ -61,7 +64,7 @@
 		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
 			<!--<jvmarg value="-Xdebug" />
 			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" /> -->
-		</java> 
+		</java>
 	</target>
 
 	<target name="runc" depends="build" description="Run the application (console)">
