--- a/build.xml
+++ b/build.xml
@@ -62,8 +62,8 @@
 
 	<target name="run" depends="build" description="Run the template application">
 		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
-			<!--<jvmarg value="-Xdebug" />
-			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" /> -->
+			<jvmarg value="-Xdebug" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
 		</java>
 	</target>
 
