Testimise lisamine - build'i muutmine ja uus jar

--- a/build.xml
+++ b/build.xml
@@ -13,12 +13,19 @@
 	<property name="test.reports.dir" value="${build.dir}/reports/" />
 	<property name="lib.dir" value="${basedir}/lib" />
 
+	<!-- TEST -->
+	<property name="test.dir" value="${basedir}/test" />
+	<property name="build.test.dir" value="${build.dir}/test" />
+
+
+
 	<!-- database variables -->
 	<property name="data.dir" value="${basedir}/data" />
 	<property name="db.file" value="${data.dir}/POSdb" />
 	<property name="db.alias" value="POS" />
 	<property name="db.url" value="jdbc:hsqldb:hsql://localhost/POS" />
 	<property name="lib.hibernate.dir" value="${lib.dir}/hibernate" />
+
 
 	<!-- Definitions of classpath variants used for different tasks -->
 
@@ -56,19 +63,30 @@
 		</fileset>
 	</path>
 
+	<path id="test-classpath">
+		<fileset dir="${lib.dir}">
+			<include name="*.jar" />
+		</fileset>
+		<pathelement path="${build.classes.dir}/" />
+		<pathelement path="${build.test.dir}/" />
+	</path>
+
 	<!-- Definitions of runnable ant targets. Run them from the command line 
 		by executing "ant [targetname]" debuggimine töötab kui classides on breakpointid 
 		lisatud -->
 
 	<target name="run" depends="build" description="Run the template application">
-		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath"
+			fork="yes">
 			<jvmarg value="-Xdebug" />
-			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
+			<jvmarg
+				value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044" />
 		</java>
 	</target>
 
 	<target name="runc" depends="build" description="Run the application (console)">
-		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath" fork="yes">
+		<java classname="ee.ut.math.tvt.tesseract.Intro" classpathref="test.classpath"
+			fork="yes">
 			<arg value="console" />
 		</java>
 	</target>
@@ -76,7 +94,9 @@
 	<target name="build" description="Build the system">
 		<mkdir dir="${build.dir}" />
 		<mkdir dir="${build.classes.dir}" />
-		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true" debuglevel="lines,vars,source" encoding="utf-8" compiler="modern" target="1.7" source="1.7" includeantruntime="false">
+		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true"
+			debuglevel="lines,vars,source" encoding="utf-8" compiler="modern"
+			target="1.7" source="1.7" includeantruntime="false">
 			<classpath refid="compile.classpath" />
 		</javac>
 
@@ -117,7 +137,8 @@
 		</copy>
 
 		<propertyfile file="etc/version.properties">
-			<entry key="build.revision.number" type="int" operation="+" value="1" />
+			<entry key="build.revision.number" type="int" operation="+"
+				value="1" />
 		</propertyfile>
 
 	</target>
@@ -169,15 +190,42 @@
 	</target>
 
 	<target name="dbmanager" description="Start the HSQLDB manager">
-		<java classname="org.hsqldb.util.DatabaseManagerSwing" classpathref="run.classpath" fork="yes">
+		<java classname="org.hsqldb.util.DatabaseManagerSwing"
+			classpathref="run.classpath" fork="yes">
 			<arg line="--user sa --url ${db.url}" />
 		</java>
 	</target>
 
 	<target name="startdb" description="Start the HSQLDB with the default params">
-		<java classname="org.hsqldb.Server" classpathref="run.classpath" fork="yes">
+		<java classname="org.hsqldb.Server" classpathref="run.classpath"
+			fork="yes">
 			<arg line="-database.0 '${db.file}' -dbname.0 '${db.alias}'" />
 		</java>
 	</target>
+
+	<target name="test" depends="build-tests" description="Run the template application">
+
+		<junit>
+			<classpath refid="test-classpath" />
+
+			<formatter type="brief" usefile="false" />
+			<batchtest>
+				<fileset dir="${build.test.dir}" includes="**/*.class" />
+			</batchtest>
+		</junit>
+
+
+	</target>
+
+	<target name="build-tests" depends="build" description="Build the system">
+		<javac srcdir="${test.dir}" destdir="${build.test.dir}" debug="true"
+			debuglevel="lines,vars,source" encoding="utf-8" compiler="modern"
+			target="1.5" source="1.5" classpathref="libs">
+			<classpath>
+				<pathelement path="${build.classes.dir}" />
+			</classpath>
+		</javac>
+	</target>
+
 
 </project>
