--- a/build.xml
+++ b/build.xml
@@ -54,6 +54,7 @@
 	<path id="test.classpath">
 		<pathelement location="${build.classes.dir}" />
 		<!-- configuration -->
+		<pathelement location="${build.test.dir}" />
 		<pathelement location="${conf.dir}" />
 		<fileset dir="lib">
 			<include name="*.jar" />
@@ -94,6 +95,7 @@
 	<target name="build" description="Build the system">
 		<mkdir dir="${build.dir}" />
 		<mkdir dir="${build.classes.dir}" />
+		<mkdir dir="${build.test.dir}" />
 		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true"
 			debuglevel="lines,vars,source" encoding="utf-8" compiler="modern"
 			target="1.7" source="1.7" includeantruntime="false">
