--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
 		<!-- configuration -->
 		<pathelement location="${build.test.dir}" />
 		<pathelement location="${conf.dir}" />
-		<fileset dir="lib">
+		<fileset dir="${lib.dir}">
 			<include name="*.jar" />
 		</fileset>
 		<fileset dir="${lib.hibernate.dir}">
@@ -209,7 +209,7 @@
 
 		<junit>
 			<classpath refid="test-classpath" />
-
+			<classpath refid="test.classpath" />
 			<formatter type="brief" usefile="false" />
 			<batchtest>
 				<fileset dir="${build.test.dir}" includes="**/*.class" />
@@ -222,7 +222,8 @@
 	<target name="build-tests" depends="build" description="Build the system">
 		<javac srcdir="${test.dir}" destdir="${build.test.dir}" debug="true"
 			debuglevel="lines,vars,source" encoding="utf-8" compiler="modern"
-			target="1.5" source="1.5" classpathref="libs">
+			target="1.5" source="1.5" includeantruntime="false">
+			<classpath refid="compile.classpath" />
 			<classpath>
 				<pathelement path="${build.classes.dir}" />
 			</classpath>
