--- a/task2/data/POSdb.properties
+++ b/task2/data/POSdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.8
-#Sun Oct 18 16:20:26 EEST 2009
+#Thu Nov 28 08:24:24 EET 2013
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
